cluster/apps/kong/ingress-argocd.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-proxy
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local
  ports:
    - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  annotations:
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - host: argocd.79.137.54.150.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-proxy
                port:
                  number: 80
