cluster/apps/kong/ingress-event-logger.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-logger-proxy
spec:
  type: ExternalName
  externalName: event-logger.event-logger.svc.cluster.local
  ports:
    - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-logger
  annotations:
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - host: events.79.137.54.150.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: event-logger-proxy
                port:
                  number: 8080
